hphp/hack/test/typecheck/invalid_override_of_req_extends_typeconst.php.exp
File "invalid_override_of_req_extends_typeconst.php", line 4, characters 14-14:
Unable to satisfy constraint on this type constant (Typing[4110])
File "invalid_override_of_req_extends_typeconst.php", line 9, characters 28-30:
Expected num
File "invalid_override_of_req_extends_typeconst.php", line 4, characters 18-24:
But got nonnull
